Track extraction from json

--- a/license.gradle
+++ b/license.gradle
@@ -3,4 +3,5 @@ apply plugin: 'license'
 license {
     header file('LICENSE')
     exclude "**/org.codehaus.groovy.runtime.ExtensionModule"
+    exclude "**/*.json"
 }
