--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ repositories {
 dependencies {
     compile 'com.mashape.unirest:unirest-java:1.4.9'
 
-    testCompile 'com.intellij:annotations:12.0'
+    testCompileOnly 'com.intellij:annotations:12.0'
     testCompile 'org.apache.tika:tika-core:1.16'
     testCompile 'org.codehaus.groovy:groovy-all:2.4.7'
     testCompile 'junit:junit:4.12'
