--- a/publication.gradle
+++ b/publication.gradle
@@ -44,8 +44,15 @@ def configureDeployment() {
 
                 pom.project {
                     name 'Music library'
+                    description 'Library for music search and download'
                     packaging 'jar'
                     url 'https://chest.one'
+
+                    scm {
+                        url 'https://github.com/DNAlchemist/ratpack-form-parser'
+                        connection 'scm:git:git://github.com/DNAlchemist/ratpack-form-parser.git'
+                        developerConnection 'scm:git:git://github.com/DNAlchemist/ratpack-form-parser.git'
+                    }
 
                     licenses {
                         license {
